Fix layout issue with special rules when buying players

--- a/src/assets/teammanagement.less
+++ b/src/assets/teammanagement.less
@@ -664,6 +664,7 @@
     }
     .playerrowsfooter {
       display: flex;
+      row-gap: 20px;
       background-color: @OldLace;
       border-top: solid @Forest 4px;
       border-bottom: solid @Forest 1px;
